--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL=https://food-delivery-backend1-h7if.onrender.com
+# VITE_API_URL=https://food-delivery-backend1-h7if.onrender.com
+
+VITE_API_URL=http://localhost:5005
